Navbar Login button fixed on Mobile

--- a/src/app/components/pages/index/index-navbar/index-navbar.component.scss
+++ b/src/app/components/pages/index/index-navbar/index-navbar.component.scss
@@ -952,6 +952,11 @@ nav {
             }
         }
     }
+
+    .login {
+        margin-top: 20px;
+        display: block;
+    }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
